manifests/infra/http-proxy.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: namespace-delegation-root
  namespace: infra
spec:
  virtualhost:
    fqdn: testbed.amsy.dev
    tls:
      secretName: tls-cert 
  includes:
  # delegate the subpath, `/product` to the HTTPProxy object in the product namespace with the name `product`
  - name: product
    namespace: product
    conditions:
    - prefix: /product
  - name: payment-info
    namespace: payment-info
    conditions:
    - prefix: /payment-info
  - name: user
    namespace: user
    conditions:
    - prefix: /user
  - name: delivery-status
    namespace: delivery-status
    conditions:
    - prefix: /delivery-status
  - name: comment
    namespace: comment
    conditions:
    - prefix: /comment
  - name: order
    namespace: order
    conditions:
    - prefix: /order
  - name: rate
    namespace: rate
    conditions:
    - prefix: /rate
  - name: cart
    namespace: cart
    conditions:
    - prefix: /cart
  - name: point
    namespace: point
    conditions:
    - prefix: /point
  - name: search
    namespace: search
    conditions:
    - prefix: /search
  routes:
    - services:
        - name: default-http-backend
          port: 8080
      permitInsecure: true
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend
        image: gcr.io/google_containers/defaultbackend:1.4
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: infra
  labels:
    app: default-http-backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: default-http-backend
